Add button styling for order form submission

--- a/src/css/order.css
+++ b/src/css/order.css
@@ -91,3 +91,9 @@
     color: var(--color-text);
     background-color: var(--color-light);
 }
+
+.order-form__button {
+    margin-top: var(--spacing-large);
+    align-self: center;
+    width: 100%;
+}
